# advent-of-code-2022

./: README.md  Taskfile.yaml  pyproject.toml
advent_of_code_2022/: day1.py  day2.py  day2part2.py  day3.py  day3part2.py  day4.py  day5.py  day6.py  day7.py  day8.py
tests/: test_day_1.py  test_day_2.py  test_day_2_part2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py
tests/inputs/: day4.txt.save  day7.txt
